--- a/index.html
+++ b/index.html
@@ -1,63 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <foot>
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
+  
 <title>My Skills</title>
 </head>
 <body>
+    
+    <header>
+        <nav class="inline-block"> 
+        <ul>
+        <h1>Alissa Hayward</h1>
+        <li>About</li>
+        <li>Work</li>
+        <li>Skills</li>
+        <li>Contact</li>
+    </ul>
 
- <!--  My UX Skills section coded using CSS flex -->
+ <img src="images/AHLogo.png">
+       </header>
+    </nav>
+
+<div>
+    
+<h1>My Skills</h1>
 <div class="flexContainer">
-    <h1>My Skills</h1>
-    <div one>
-    <img src="Images/card sorting.jpg" alt="card sorting" width="275" height="300">
-    <h2>UX/UI Design</h2>
-<p>Card sorting is a research technique used to create an
-    Information Architecture that matches users expectations. </p>
-</div one>
-<div two>
-    <img src="Images/userinterview.jpg" alt="user interview" width="275" height="300">
-<h2>UX Research</h2>
-<p>I conduct user interviews to understand the needs, behaviors and attitudes of the user.</p>
-</div two>
-<div three>
-    <img src="Images/figma.jpg" alt="figma logo" width="275" height="300">
-    <h2>Tools</h2>
-<p> Figma is my preferred design tool.</p>
-</div three>
+    <div class="flexContainer-item">
+        <img src="images/card sorting.jpg" alt="card sorting" width="275" height="300">
+        <h2>UX/UI Design</h2>
+    <p>Card sorting is a research technique 
+        used to create an Information Architecture 
+        that matches users expectations. </p>
+    </div>
+    <div> 
+        <div class="flexContainer">
+            <div class="flexContainer-item">
+        <img src="images/userinterview.jpg" alt="user interview" width="275" height="300">
+    <h2>UX Research</h2>
+    <p>I conduct user interviews to understand the needs, behaviors and attitudes of the user.</p>
+    </div>
+    <div>
+        <div class="flexContainer">
+            <div class="flexContainer-item">
+        <img src="images/figma.jpg" alt="figma logo" width="275" height="300">
+        <h2>Tools</h2>
+    <p> Figma is my preferred design tool.</p>
+    </div>
 
-<div class="workGrid">
+    </div>
+<div>
+<br>
+<br>
 <h1>My Work</h1>
-<br>
-<br>
-<br>
-<br>
-<div one>
-<img src="Images/HomeBase.jpg" alt="HomeBase logo" width="300" height="300">
-</div one>
-<br>
-<div two>
+<div class="myDiv">
+    <div class="myDiv-item">
+    <img src="images/HomeBase.jpg" alt="HomeBase logo" width="300" height="300">
     <h4>HomeBase Travel App</h4>
     <p>A resource for international travelers</p>
     <button type="button">View Project</button>
-</div two>
-<div three>
-    <img src="Images/BLMwebpage.jpg" alt="HomeBase logo" width="350" height="300">
-</div three>
-<div four>
-    <h4>BLM Website Redesign</h4>
-    <p>Makeover of a government website</p>
-    <button type="button">View Project</button>
-</div four>
-<div five>
-    <img src="Images/Breakroom Logo.jpg" alt="HomeBase logo" width="350" height="300"> 
-</div five>
-<div six>
-    <h4>Breakroom</h4>
-    <p>A meet-up app for remote workers</p>
-    <button type="button">View Project</button>
-</div six>
-<h3>View All Projects</h3>
+</div>
 
-</body>
-</html>
+
+<div>
+<div class="myDiv">
+    <div class="myDiv-item">
+    <img src="images/BLMwebpage.jpg" alt="HomeBase logo" width="350" height="300">
+    <h4>BLM Website Redesign</h4>
+<p>Makeover of a government website</p>
+<button type="button">View Project</button>            
+</div>
+
+<div>
+<div class="myDiv"> 
+    <div class="myDiv-item">
+    <img src="images/Breakroom Logo.jpg" alt="HomeBase logo" width="350" height="300"> 
+<h4>Breakroom</h4>
+<p>A meet-up app for remote workers</p>
+<button type="button">View Project</button>
+
+<h3>View All Projects</h3>
+</div>
+</section>
+</div>
+<footer>
+    <div class="header">
+        <h1>Alissa Hayward</h1>
+        <p>About</p>
+        <p>Work</p>
+        <p>Skills</p>
+        <p>Contact</p>
+        <img src="images/AHLogo.png">
+      </div>
+</footer>
+
